<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accessbility_suggestion_dropdown_closed">No suggestions available</string>
    <string name="accessbility_suggestion_dropdown_opened">Contact suggestions opened</string>
    <string name="accessibility_add_attendee">Add attendee</string>
    <string name="accessibility_alarm_remind">Alarm reminders</string>
    <string name="accessibility_all_day">All day event</string>
    <string name="accessibility_change_view_tab">Selected: %s</string>
    <string name="accessibility_day_page_selected">Currently in day view, %2$s %3$d, %1$d</string>
    <string name="accessibility_month_page_selected_prefix">Currently in month view for %2$s %1$d. Selected date: %4$s %5$d, %3$d.</string>
    <string name="accessibility_pick_start_date">Start date</string>
    <string name="accessibility_pick_time_zone">Time zone</string>
    <string name="accessibility_remove_attendee">Remove attendee</string>
    <string name="accessibility_repeats">Repeat</string>
    <string name="accessibility_sync_cal">Sync calendar</string>
    <string name="accessibility_week_page_selected">Currently in week view, week %2$d of %1$d</string>
    <string name="accessibility_year_item_selected">Selected month: %d. Tap to open month view.</string>
    <string name="accessibility_year_page_selected">Year view for %d. Swipe left or right to switch between years, tap to select months.</string>
    <string name="account_and_calendar">Accounts</string>
    <string name="account_import_calendar">Import calendar</string>
    <string name="account_manager_delete">Delete account</string>
    <string name="account_manager_delete_calendar_tips">Delete the calendar associated with this account now?</string>
    <string name="account_manager_delete_dialog">Delete this account now?</string>
    <string name="account_manager_delete_events">Delete events</string>
    <string name="account_manager_install_email">Install system email client</string>
    <string name="account_manager_install_email_tips">Install the system email client again to be able to restore your accounts and add new ones</string>
    <string name="account_manager_install_failed">"Mail isn't installed. You can download it from GetApps."</string>
    <string name="account_manager_install_immediately">Install</string>
    <string name="account_manager_installing">Installing…</string>
    <string name="account_manager_not_display">"Don't show"</string>
    <string name="account_manager_settings_sync">Sync frequency</string>
    <string name="account_manager_settings_sync_immediately">Sync now</string>
    <string name="account_manager_tips">"Can't delete account. You can do this in the corresponding app."</string>
    <string name="calendar_data_sharing_instruction">Statement on sharing data with third parties</string>
    <string name="calendar_privacy_policy">Privacy Policy</string>
    <string name="calendar_privacy_related">Privacy</string>
    <string name="calendar_user_agreement">User Agreement</string>
    <string name="date_calculate">Calculate date</string>
    <string name="date_jump_title">Jump to date</string>
    <string name="default_reminder_later_time">Default interval for \"Remind later\"</string>
    <string name="default_reminder_mode">Reminders</string>
    <string name="edit_event_anniversary_name_hint">Event</string>
    <string name="event_info_reminders_label_1">Reminder</string>
    <string name="event_info_when">When</string>
    <string name="icon_add_description">Add a Home screen shortcut</string>
    <string name="menu_general_preferences">General</string>
    <string name="menu_reminder_preferences">Reminders</string>
    <string name="permission_description">Permissions details</string>
    <string name="permission_description_audio">Access music and other audio stored on this device</string>
    <string name="permission_description_image_video">Access photos and videos stored on this device</string>
    <string name="permission_management">Permissions</string>
    <string name="permission_read_audio">Access audio</string>
    <string name="permission_read_image_video">Access photos and videos</string>
    <string name="prefDefault_alerts_vibrateWhen">never</string>
    <string name="pref_default_popup_alert_value">none</string>
    <string name="pref_title_alarm_remind">Alarm reminders</string>
    <string name="preferences_alarms_category_title">Alarm reminders</string>
    <string name="preferences_alarms_sound">Sound</string>
    <string name="preferences_alarms_vibrateWhen">Vibrate</string>
    <string name="preferences_alerts_vibrateWhen_title">Vibrate</string>
    <string name="preferences_alerts_vibrate_title">Default reminder</string>
    <string name="preferences_allow_remind">Allow reminders</string>
    <string name="preferences_default_allday_reminder_default_value">480</string>
    <string name="preferences_default_allday_reminder_title">Default all-day reminder time</string>
    <string name="preferences_default_reminder_default_value">0</string>
    <string name="preferences_default_reminder_later_time_default_value">300000</string>
    <string name="preferences_default_reminder_title">Default reminder time</string>
    <string name="preferences_import_credit_repayment">信用卡还款</string>
    <string name="preferences_import_electricity_bill">电费缴费</string>
    <string name="preferences_import_gas_bill">燃气缴费</string>
    <string name="preferences_import_hotel">酒店</string>
    <string name="preferences_import_loan">贷款账单</string>
    <string name="preferences_import_movie">电影票</string>
    <string name="preferences_import_plane">机票</string>
    <string name="preferences_import_train">火车票</string>
    <string name="preferences_import_travel">机票火车票</string>
    <string name="preferences_notification_ringtone_title">Sound</string>
    <string name="preferences_popup_alert_title">Pop-up alerts</string>
    <string name="preferences_week_start_day_default">-%d</string>
    <string name="preferences_week_start_day_title">Start of the week</string>
    <string name="premission_access_calendar">Calendar</string>
    <string name="premission_description_access_calendar">For accessing and editing calendar events</string>
    <string name="premission_description_notice_manager">Notifications for events and holidays</string>
    <string name="premission_description_read_contacts">"For showing your contacts' birthdays"</string>
    <string name="premission_description_read_phone_state">For automatically silencing alarms during calls</string>
    <string name="premission_description_read_write_storage">For accessing and saving files and photos on this device</string>
    <string name="premission_read_contacts">Contacts</string>
    <string name="premission_read_notice_state">Notifications</string>
    <string name="premission_read_phone_state">Access device info</string>
    <string name="premission_read_write_storage">Storage</string>
    <string name="privacy_and_permissions">Privacy &amp; permissions</string>
    <string name="response_maybe">Maybe</string>
    <string name="response_no">No</string>
    <string name="response_yes">Yes</string>
    <string name="search_events">Search for events</string>
    <string name="setting">Settings</string>
    <string name="setting_accounts">Calendar accounts</string>
    <string name="setting_chinese_calendar">Chinese calendar</string>
    <string name="setting_daysoff_update">Update info about public holidays</string>
    <string name="setting_desc_import_todo">Import time-sensitive tasks from Notes</string>
    <string name="setting_features_title">Feature settings</string>
    <string name="setting_holiday_display_desc">Holiday cards are located below your agenda on the home page</string>
    <string name="setting_holiday_reminder">Holiday reminder</string>
    <string name="setting_import_events">Import events</string>
    <string name="setting_others">Additional</string>
    <string name="setting_show_reject_agenda">Show declined events</string>
    <string name="setting_title_about">About this app</string>
    <string name="setting_title_ai_time_parser">智能提取日程时间</string>
    <string name="setting_title_ai_time_parser_summary">智能提取并设定创建日程标题中的时间</string>
    <string name="setting_title_holiday_display">Show holidays</string>
    <string name="setting_title_import_todo">Import tasks</string>
    <string name="setting_title_subscription_desc">关闭后，订阅卡片和入口均不显示，订阅服务将无法使用</string>
    <string name="setting_title_subscription_display">显示订阅服务</string>
    <string name="setting_title_weather_card_desc">位于农历卡片右侧的天气信息</string>
    <string name="setting_title_weather_card_display">显示天气服务</string>
    <string name="setting_title_yiji_display">显示黄历宜忌</string>
    <string name="setting_user_experience">用户体验计划</string>
    <string name="subscription_service">订阅服务</string>
    <string name="time_zone">Time zone</string>
    <string name="train_event_station_header_arrive_time">Arrives</string>
    <string name="train_event_station_header_depart_time">Departs</string>
    <string name="train_event_station_header_name">Station</string>
    <string name="train_event_station_header_stay_time">Stop time</string>
    <string name="trust_certificate_accept">Accept</string>
    <string name="trust_certificate_fingerprint_verified">I have manually verified the whole fingerprint.</string>
    <string name="trust_certificate_fingerprints">Fingerprints</string>
    <string name="trust_certificate_issued_by">Issued by</string>
    <string name="trust_certificate_issued_for">Issued for</string>
    <string name="trust_certificate_reject">Reject</string>
    <string name="trust_certificate_reset_info">You can reset all custom certificates in the app settings.</string>
    <string name="trust_certificate_unknown_certificate_found">cert4android has encountered an unknown certificate. Do you want to trust it?</string>
    <string name="trust_certificate_validity_period">Validity period</string>
    <string name="trust_certificate_x509_certificate_details">X509 certificate details</string>
    <string name="view_event_response_label">Attending?</string>
</resources>