<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory>
        <CheckBoxPreference android:title="@string/preferences_import_credit_repayment" android:key="preferences_credit_repayment" android:defaultValue="false" />
        <CheckBoxPreference android:title="@string/preferences_import_travel" android:key="preferences_travel" android:defaultValue="false" />
        <CheckBoxPreference android:title="@string/preferences_import_movie" android:key="preferences_movie" android:defaultValue="false" />
        <CheckBoxPreference android:title="@string/preferences_import_electricity_bill" android:key="preferences_electricity_bill" android:defaultValue="false" />
        <CheckBoxPreference android:title="@string/preferences_import_gas_bill" android:key="preferences_gas_bill" android:defaultValue="false" />
        <CheckBoxPreference android:title="@string/preferences_import_hotel" android:key="preferences_hotel" android:defaultValue="false" />
        <CheckBoxPreference android:title="@string/preferences_import_loan" android:key="preferences_loan" android:defaultValue="false" />
    </PreferenceCategory>
</PreferenceScreen>